# bsllmner-mk2

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.front.dev.yml  compose.front.yml  compose.slurm.yml.template  compose.yml  init-slurm.sh  mkdocs.yml  pyproject.toml  slurm.sh.template
.github/workflows/: lint.yml  pytest.yml  release.yml
bsllmner2/: api.py  benchmark.py  biosample.py  bs.py  bs_filter_key_val_rules.json  cli.py  cli_common.py  cli_extract.py  cli_select.py  config.py  errors.py  extract_worker.py  filter_keys.json  io.py  llm.py  main.py  metrics.py  models.py  ontology_search.py  pipeline.py  schema.py  select.py  utils.py
bsllmner2/bs/: __init__.py  filter_keys.json  utils.py
bsllmner2/client/: ollama.py
bsllmner2/format/: cell_line.schema.json
bsllmner2/prompt/: prompt.yml  prompt_extract.yml  prompt_extract_multi.yml  prompt_select.yml  utils.py
docs/: architecture.md  benchmarking.md  chip-atlas.md  configuration.md  data-formats.md  development.md  extract-mode.md  getting-started.md  installation.md  memo.md  nig-slurm.md  quick-start.md  select-mode.md  testing.md
front/: .dockerignore  Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
front/src/: App.tsx  index.html  main.tsx  schema.ts  theme.ts  utils.ts  vite-env.d.ts
front/src/components/: AdvancedCodeBlock.tsx  AppFooter.tsx  AppHeader.tsx  CodeBlock.tsx  FormCard.tsx  Frame.tsx  Loading.tsx  OurCard.tsx  OurLink.tsx  RunCard.tsx
front/src/hooks/: useDefaultExtractFormat.ts  useDefaultExtractPrompt.ts  useOllamaModels.ts  usePullOllamaModel.ts  useRunDetail.ts  useRunNames.ts  useRuns.ts  useServiceInfo.ts
front/src/pages/: Home.tsx  StatusPage.tsx
scripts/: build_subset_ontologies.sh  chip_atlas_batch.py  collect_rnaseq_biosample.py  download_ontology_files.py  dump_bs_entries.py  extract.schema.json  inspect_select_result.py  list_unmapped.py  ncbi_gene_to_owl.py  prepare_bs_entries.py  preprocess_cellosaurus.py  print_select_result.py  prompt_extract.yml  run_model_bench.sh  select-config-hg38-specific.json  select-config-hg38.json  select-config-mm10.json  select-config-plants.json  select-config.json
tests/: README.md  mm10_memo.md
tests/data/: README.md  test.owl
tests/model-evaluation/: README.md  analyze_token_usage.py  evaluation_results.py  model_comparison.py  model_evaluation_results.tsv  model_evaluation_results_251127-1.tsv  model_evaluation_results_251216-1.tsv  model_evaluation_results_251216-2.tsv  run-model-evaluation-batch.sh  speed_exploration.py
tests/model-evaluation/model-evaluation-results/251127-1/extract/: model-eval-251127-1-deepseek-r1_8b.json  model-eval-251127-1-gemma3_12b.json  model-eval-251127-1-gemma3_4b.json  model-eval-251127-1-llama3.1_8b.json  model-eval-251127-1-phi4_14b.json  model-eval-251127-1-qwen3_32b.json
tests/model-evaluation/model-evaluation-results/251127-1/select/: select_model-eval-251127-1-deepseek-r1_32b.json  select_model-eval-251127-1-deepseek-r1_8b.json  select_model-eval-251127-1-gemma3_27b.json  select_model-eval-251127-1-phi4_14b.json  select_model-eval-251127-1-qwen3_32b.json
tests/model-evaluation/model-evaluation-results/251216-2/extract/: model-eval-251216-2-deepseek-r1_32b.json  model-eval-251216-2-deepseek-r1_8b.json  model-eval-251216-2-gemma3_12b.json  model-eval-251216-2-gemma3_27b.json  model-eval-251216-2-gpt-oss_20b.json  model-eval-251216-2-phi4_14b.json  model-eval-251216-2-qwen3_32b.json  model-eval-251216-2-qwen3_8b.json
tests/model-evaluation/model-evaluation-results/251216-2/select/: select_model-eval-251216-2-deepseek-r1_32b.json  select_model-eval-251216-2-deepseek-r1_8b.json  select_model-eval-251216-2-gemma3_12b.json  select_model-eval-251216-2-gemma3_27b.json  select_model-eval-251216-2-gpt-oss_20b.json  select_model-eval-251216-2-phi4_14b.json  select_model-eval-251216-2-qwen3_32b.json  select_model-eval-251216-2-qwen3_8b.json
tests/model-evaluation/model-evaluation-results/extract/: models-with-large-dataset-deepseek-r1_32b.json  models-with-large-dataset-gemma3_27b.json  models-with-large-dataset-gpt-oss_20b.json  models-with-large-dataset-qwen3_4b.json  models-with-large-dataset-qwen3_8b.json
tests/model-evaluation/model-evaluation-results/select/: select_models-with-large-dataset-gemma3_12b.json  select_models-with-large-dataset-gemma3_4b.json  select_models-with-large-dataset-gpt-oss_20b.json  select_models-with-large-dataset-llama3.1_8b.json  select_models-with-large-dataset-qwen3_4b.json  select_models-with-large-dataset-qwen3_8b.json
tests/py_tests/: conftest.py  test_benchmark.py  test_biosample.py  test_cli_common.py  test_cli_extract.py  test_cli_select.py  test_config.py  test_errors.py  test_inspect_select_result.py  test_io.py  test_llm.py  test_metrics.py  test_models.py  test_ncbi_gene_to_owl.py  test_ontology_search.py  test_pipeline.py  test_preprocess_cellosaurus.py  test_select.py  test_utils.py
tests/py_tests/fixtures/: mini_select_result.json
tests/test-data/: cell_line_example.mapping.tsv
tests/zenodo-data/: biosample_cellosaurus_mapping_gold_standard.tsv  biosample_cellosaurus_mapping_result_llm_assisted.tsv  biosample_cellosaurus_mapping_result_metasra.tsv  biosample_cellosaurus_mapping_testset.json  biosample_gene_extraction_result.tsv
