[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bsllmner-mk2"
authors = [{ name = "DBCLS" }]
description = "Named Entity Recognition (NER) of biological terms in BioSample records using LLMs, developed as bsllmner-mk2."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
  "fastapi",
  "httpx",
  "ollama",
  "pydantic",
  "pyyaml",
  "uvicorn[standard]",
]
version = "0.1.0"

[project.urls]
Homepage = "https://github.com/dbcls/bsllmner-mk2"
Documentation = "https://github.com/dbcls/bsllmner-mk2/blob/main/README.md"
Repository = "https://github.com/dbcls/bsllmner-mk2.git"

[project.optional-dependencies]
tests = [
  "isort",
  "mypy",
  "pylint",
  "pytest-cov",
  "pytest-mock",
  "pytest",
  "types-PyYAML",
]

[project.scripts]
bsllmner2_extract = "bsllmner2.cli_extract:run_cli_extract"
bsllmner2_select = "bsllmner2.cli_select:run_cli_select"
bsllmner2_api = "bsllmner2.api:run_api"
bsllmner2_metrics = "bsllmner2.metrics:main"

[tool.setuptools]
packages = ["bsllmner2", "bsllmner2.bs", "bsllmner2.client"]
include-package-data = true

[tool.setuptools.package-data]
bsllmner2 = [
  "bs/filter_keys.json",
  "prompt/prompt_extract.yml",
  "prompt/prompt_select.yml",
]

[tool.pytest.ini_options]
addopts = "--cov=bsllmner2 --cov-report=html:tests/htmlcov"
testpaths = ["tests/py_tests"]

[tool.mypy]
files = ["./bsllmner2/**/*.py"]
follow_imports = "silent"
strict = true
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
  "C0114", # Missing module docstring
  "C0115", # Missing class docstring
  "C0116", # Missing function or method docstring
  "C0301", # Line too long
  "R0401", # Cyclic import
  "R0903", # Too few public methods
  "R0911", # Too many return statements
  "R0912", # Too many branches
  "R0913", # Too many arguments
  "R0914", # Too many local variables
  "R0915", # Too many statements
  "R1705", # Unnecessary "else" after "return"
]
